modification liste de mes emprunts pour rendre tableau plus jolie et responsive en mettant des cards. +ajout block pour image.

--- a/src/main/resources/templates/liste-de-mes-emprunts.html
+++ b/src/main/resources/templates/liste-de-mes-emprunts.html
@@ -2,7 +2,7 @@
 <html lang="fr" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Mes emrpunts</title>
+    <title>Mes emprunts</title>
 </head>
 <body>
 <div th:insert="header.html"/>
@@ -10,45 +10,39 @@
 <div class="container">
     <h1>Liste des livres</h1>
 
-    <div class="cstyle">
-        <table class="table listTableDeco">
-            <div class="row" style="margin-bottom: 10px; border:black solid 1px">
-                <th:text th:if="${!livreBeans.isEmpty()}">
-
-                    <div class="col-sm">Titre</div>
-                    <div class="col-sm">Nom de l'Auteur</div>
-                    <div class="col-sm">Date de l'emprunt</div>
-                    <div class="col-sm">Date de retour</div>
-                    <div class="col-sm">La date d'emprunt est prolongée</div>
-                    <div class="col-sm">Prolongation ?</div>
-                </th:text>
+    <th:text th:each="livre : ${livreBeans}">
+    <div class="card" style="width: 18rem; margin-bottom: 10px;">
+        <img class="card-img-top" src="..." alt="Card image cap">
 
 
-                <th:text th:each="livre : ${livreBeans}">
-                    <div class="col-sm"><a th:href="@{/livre/{id}(id=${livre.id})}" th:text="${livre.titre}"></a></div>
-                    <div class="col-sm" th:text="${livre.auteur}"></div>
+        <div class="card-body">
+            <p class="card-title"></p>
+            <p class="card-text"></p>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">Titre : <a th:href="@{/livre/{id}(id=${livre.id})}" th:text="${livre.titre}"/></li>
+            <li class="list-group-item">Auteur : <p th:text="${livre.auteur}"/></li>
 
-                    <th:text th:each="exemplaire : ${livre.exemplaireList}">
-                        <div class="col-sm" th:text="${#dates.format(exemplaire.dateDemprunt, 'yyyy-MM-dd')}"></div>
-                        <div class="col-sm" th:text="${exemplaire.dateRetour}"></div>
-                        <div class="col-sm" th:text="${exemplaire.prolongerEmprunt}"></div>
+            <th:text th:each="exemplaire : ${livre.exemplaireList}">
 
-                        <div class="col-sm"><a th:if="${!exemplaire.isProlongerEmprunt()}"
-                                               th:href="@{/prolonger-emprunt/{id}(id=${exemplaire.id})}"
-                                               class="btn btn-success">Prolonger l'emprunt</a></div>
+            <li class="list-group-item" >Date de l'emprunt : <p th:text="${#dates.format(exemplaire.dateDemprunt, 'yyyy-MM-dd')}" /> </li>
+            <li class="list-group-item">Date de retour : <p th:text="${exemplaire.dateRetour}" /></li>
+            <li class="list-group-item">La date d'emprunt est prolongée : <p th:text="${exemplaire.prolongerEmprunt}" /></li>
+            <li class="list-group-item">Prolongation ? : <a th:if="${!exemplaire.isProlongerEmprunt()}"
+                                                            th:href="@{/prolonger-emprunt/{id}(id=${exemplaire.id})}"
+                                                            class="btn btn-success">Prolonger l'emprunt</a></li>
 
-
-                    </th:text>
-                </th:text>
-            </div>
-
-            </tbody>
-            <div th:if="${livreBeans.isEmpty()}">
-                <p>Vous n'avez aucun livre, venez à la bibliotheque en prendre de nouveaux.</p>
-            </div>
-        </table>
+            </th:text>
+        </ul>
 
     </div>
+    </th:text>
+
+        <div th:if="${livreBeans.isEmpty()}">
+            <p>Vous n'avez aucun livre, venez à la bibliotheque en prendre de nouveaux.</p>
+        </div>
+    </div>
+
 </div>
 </body>
 </html>
